--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="game-container">
         <header class="game-header">
-            <h1 class="game-title">Snake Game</h1>
+            <h1 class="game-title">Jogo da Cobra</h1>
             <p class="game-subtitle">Use as setas do teclado para mover, ESPAÇO para pausar</p>
         </header>
 
@@ -32,7 +32,7 @@
 
         <div id="gameOverScreen" class="game-over-screen" style="display: none;">
             <div class="game-over-card">
-                <h2 class="game-over-title">Game Over!</h2>
+                <h2 class="game-over-title">Perdeu!</h2>
                 <p class="game-over-score">Pontuação Final: <span id="finalScore">0</span></p>
                 <button id="playAgainBtn" class="btn btn-primary">Jogar Novamente</button>
             </div>
