--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
         </div>
     </div>
 
-    <script src="snake-script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
